--- a/README
+++ b/README
@@ -9,7 +9,9 @@ SYNOPSIS
       is_faster(5, -10, sub {...}, sub {...}, "this is 5 times faster than that")
       is_n_times_faster(5, -10, sub {...}, sub {...}, "this is 5 times faster than that")
 
-            is_faster(-10, $bench1, $bench2, "res1 was faster than res2");
+      is_faster(-10, $bench1, $bench2, "res1 was faster than res2");
+
+            is_fastest("c", -1, {a => sub {...}, b => sub {...}, c => sub {...},);
 
 DESCRIPTION
     Sometimes you want to make sure that your "faster" algorithm really is
@@ -22,16 +24,19 @@ DESCRIPTION
     instead of sub routine reference.
 
 USAGE
-    There are 2 functions exported: "is_faster()" and "is_n_times_faster()".
-    Actually "is_n_times_faster()" is redundant because "is_faster()" can do the
-    same thing just by giving it an extra argument.
+    There are 3 functions exported: "is_faster()", "is_n_times_faster()" and
+    "is_fastest()". Actually "is_faster()" is redundant because
+    "is_n_times_faster()" can do the same thing just by setting n to 1.
 
     Anywhere you can pass a subroutine reference you can also pass in a
     Benchmark object.
 
-            # call as
-            # is_faster($times, $sub1, $sub2, $name)
-            # is_faster($faster, $times, $sub1, $sub2, $name)
+      # call as
+      # is_faster($times, $sub1, $sub2, $name)
+      # is_faster($faster, $times, $sub1, $sub2, $name)
+
+    If you leave the number of iterations blank then it will use Benchmark's
+    default.
 
   is_faster()
     is_faster($times, $sub1, $sub2, $name)
@@ -42,7 +47,7 @@ USAGE
     results. Instead of either subroutine reference you can pass in a Benchmark
     object. If you pass in 2 Benchmark objects then $times is irrelevant.
 
-    If $times is negative then that speicifies a minimum duration for the
+    If $times is negative then that specifies a minimum duration for the
     benchmark rather than a number of iterations (see Benchmark for more
     details). I strongly recommend you use this feature if you want your modules
     to still pass tests reliably on machines that are much faster than your own.
@@ -58,21 +63,35 @@ USAGE
     This is exactly the same as the second form of is_faster but it's just
     explicit about the "n times" part.
 
-DANGERS
-    Benchmarking can be slow so please consider leaving out benchmark tests from
-    your default test suite, perhaps only running them if the user has set a
-    particualr environment variable.
+  is_fastest()
+    is_fastest($bname, $times, $bhash, $name)
 
-    Some benchmarks are inherently unreliable.
+    This takes a hash reference containing benchmark subroutines as values and
+    their names as keys. It times each subroutine and checks that the one named
+    in $bname was the fastest. If the test fails, it will print out a sorted
+    list of the timings of all the subroutines.
+
+VARIABLES
+    If you set "$Test::Benchmark::VERBOSE = 1" then the benchmark results will
+    be printed out as diagnostics whether the tests pass or fail.
+
+DANGERS
+    Benchmarking can be slow so please consider leaving out the benchmark tests
+    from your default test suite, perhaps only running them if the user has set
+    a particular environment variable.
+
+    Some benchmarks are inherently unreliable and should not be part of an
+    automated test suite.
 
 BUGS
-    None that I know of.
+    None that I know of but I said that last time too.
 
 DEPENDENCIES
-    Benchmark, Test::Builder but they come with most Perl's.
+    Benchmark, Test::Builder but they come with most Perls.
 
 HISTORY
-    This came up on the perl-qa mailing list, no one else.
+    This came up on the perl-qa mailing list, when Jim Cromie wanted to display
+    benchmark results in tests.
 
 SEE ALSO
     Test::Builder, Benchmark
