Import of FDALY/Test-Benchmark-0.003 from CPAN.
gitpan-cpan-distribution: Test-Benchmark
gitpan-cpan-version:      0.003
gitpan-cpan-path:         FDALY/Test-Benchmark-0.003.tar.gz
gitpan-cpan-author:       FDALY
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.003
+
+Added dependency on Test::NoWarningss
+
 0.002
 
 Fixed the comparison, got confused with all n/u/s and 1/2, effectively I was
